--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,4 +1,10 @@
 <app-nav-bar></app-nav-bar>
 
-<div class="container" style="margin-top: 140px"></div>
-<h1>Welcome to the {{ title }}</h1>
+<div class="container" style="margin-top: 140px">
+  <h1>Welcome to the {{ title }}</h1>
+  <ul>
+    <li *ngFor="let product of products">
+      {{ product.name }}
+    </li>
+  </ul>
+</div>
