--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,10 +1,6 @@
-<app-nav-bar></app-nav-bar>
+<app-nav-bar />
 
 <div class="container" style="margin-top: 140px">
   <h1>Welcome to the {{ title }}</h1>
-  <ul>
-    <li *ngFor="let product of products">
-      {{ product.name }}
-    </li>
-  </ul>
+  <app-shop />
 </div>
