--- a/Client/src/app/shop/shop.component.html
+++ b/Client/src/app/shop/shop.component.html
@@ -13,7 +13,7 @@
         <li
           class="list-group-item"
           *ngFor="let brand of brands"
-          [ngClass]="{ active: brand.id === brandIdSelected }"
+          [ngClass]="{ active: brand.id === shopParam.brandId }"
           (click)="onBrandSelected(brand.id)"
         >
           {{ brand.name }}
@@ -24,7 +24,7 @@
         <li
           class="list-group-item"
           *ngFor="let type of types"
-          [class.active]="type.id === typeIdSelected"
+          [class.active]="type.id === shopParam.typeId"
           (click)="onTypeSelected(type.id)"
         >
           {{ type.name }}
@@ -35,9 +35,19 @@
     <section class="col-9">
       <div class="d-flex justify-content-between align-items-center pb-2">
         <header>
-          <span
-            >Showing <strong>10</strong> of <strong>20</strong> Results</span
-          >
+          <span *ngIf="totalCount > 0"
+            >Showing
+            <strong>
+              {{ (shopParam.pageNumber - 1) * shopParam.pageSize + 1 }} -
+              {{
+                shopParam.pageNumber * shopParam.pageSize > totalCount
+                  ? totalCount
+                  : shopParam.pageNumber * shopParam.pageSize
+              }}
+            </strong>
+            of <strong>{{ totalCount }}</strong> Results
+          </span>
+          <span *ngIf="totalCount === 0">There are no products</span>
         </header>
         <div class="d-flex mt-2">
           <input type="text" placeholder="Search" class="form-control me-2" />
@@ -50,6 +60,21 @@
         <div class="col" *ngFor="let product of products">
           <app-product-item [product]="product" />
         </div>
+      </div>
+
+      <div class="d-flex justify-content-center mt-3" *ngIf="totalCount > 0">
+        <pagination
+          [boundaryLinks]="true"
+          [totalItems]="totalCount"
+          [maxSize]="5"
+          [itemsPerPage]="shopParam.pageSize"
+          (pageChanged)="onPageChanged($event)"
+          previousText="&lsaquo;"
+          nextText="&rsaquo;"
+          firstText="&laquo;"
+          lastText="&raquo;"
+        >
+        </pagination>
       </div>
     </section>
   </div>
