--- a/Client/src/app/core/nav-bar/nav-bar.component.html
+++ b/Client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,23 +1,31 @@
 <header
   class="d-flex flex-md-row align-items-center justify-content-between p-3 px-4 mb-4 border-bottom fixed-top shadow-sm"
 >
-  <a class="text-decoration-none text-dark position-relative" href="">
+  <a class="text-decoration-none text-dark position-relative" routerLink="/">
     <h2>SkiCommerce</h2>
   </a>
 
   <nav class="my-2 text-uppercase fs-4">
-    <a class="me-3 py-2 text-dark text-decoration-none" href="#">Home</a>
-    <a class="me-3 py-2 text-dark text-decoration-none" href="#">Shop</a>
-    <a class="me-3 py-2 text-dark text-decoration-none" href="#">Contact</a>
+    <a
+      class="me-3 py-2"
+      routerLinkActive="active"
+      routerLink="/"
+      [routerLinkActiveOptions]="{ exact: true }"
+      >Home</a
+    >
+    <a class="me-3 py-2" routerLinkActive="active" routerLink="/shop">Shop</a>
+    <a class="me-3 py-2" routerLinkActive="active" routerLink="/contact"
+      >Contact</a
+    >
   </nav>
 
   <div class="d-flex align-items-center font-weight-bold">
-    <a class="text-decoration-none text-dark position-relative" href="#">
+    <a class="text-decoration-none text-dark position-relative">
       <i class="fa fa-shopping-cart fa-2x me-5 text-dark"></i>
       <div class="cart-no">5</div>
     </a>
 
-    <a href="" class="btn btn-outline-secondary me-2">Login</a>
-    <a href="" class="btn btn-outline-secondary me-2">Sign Up</a>
+    <a routerLink="/" class="btn btn-outline-secondary me-2">Login</a>
+    <a routerLink="/" class="btn btn-outline-secondary me-2">Sign Up</a>
   </div>
 </header>
