[FEAT] Error Handling with HTTP Interceptor

--- a/Client/src/app/core/nav-bar/nav-bar.component.html
+++ b/Client/src/app/core/nav-bar/nav-bar.component.html
@@ -14,8 +14,8 @@
       >Home</a
     >
     <a class="me-3 py-2" routerLinkActive="active" routerLink="/shop">Shop</a>
-    <a class="me-3 py-2" routerLinkActive="active" routerLink="/contact"
-      >Contact</a
+    <a class="me-3 py-2" routerLinkActive="active" routerLink="/test-error"
+      >ERROR</a
     >
   </nav>
 
