--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,3 +1,6 @@
+<ngx-spinner type="ball-clip-rotate-pulse">
+  <h3 class="mt-3" style="color: orange">Loading...</h3>
+</ngx-spinner>
 <app-nav-bar />
 <app-section-header />
 
