--- a/Client/src/app/core/nav-bar/nav-bar.component.html
+++ b/Client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <header
-  class="d-flex flex-md-row align-items-center justify-content-between p-3 px-4 mb-4 border-bottom fixed-top shadow-sm"
+  class="d-flex flex-md-row align-items-center justify-content-between p-3 px-4 mb-4 border-bottom fixed-top shadow-sm bg-white"
 >
   <a class="text-decoration-none text-dark position-relative" routerLink="/">
     <h2>SkiCommerce</h2>
