--- a/Client/src/app/home/home.component.html
+++ b/Client/src/app/home/home.component.html
@@ -1,1 +1,28 @@
-<p>home works!</p>
+<carousel [isAnimated]="true">
+  <slide>
+    <img
+      src="assets/hero1.jpg"
+      alt="slide"
+      style="width: 100%; display: block"
+    />
+  </slide>
+  <slide>
+    <img
+      src="assets/hero2.jpg"
+      alt="slide"
+      style="width: 100%; display: block"
+    />
+  </slide>
+  <slide>
+    <img
+      src="assets/hero3.jpg"
+      alt="slide"
+      style="width: 100%; display: block"
+    />
+  </slide>
+</carousel>
+<section class="featured">
+  <div class="d-flex justify-content-center pt-4">
+    <h1>Welcome to SkiCommerce</h1>
+  </div>
+</section>
